- in sfarsit cam e ce trebuie - de adaugat produse + update + delete pe products

--- a/public/contact.html
+++ b/public/contact.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ro_RO/sdk.js#xfbml=1&version=v3.2"></script>
 </head>
 
 <body>
@@ -35,17 +37,13 @@
                     <div class="col-sm-5 ">
                         <h5 class="contact-style-h">Cum ne numim?</h5>
                         <p class="contact-style-p">SERVUL AUTO AB SRL</p>
-                        <h5 class="contact-style-h">Unde ne gasesti?</h5>
-                        <p class="contact-style-p">B-dul Bucuresti 35A<br>Loc. Baia Mare<br>Jud. Maramures</p>
                         <h5 class="contact-style-h">Ne poti contacta la:</h5>
                         <p class="contact-style-p">Telefon: 0745 709 992<br>E-mail: produsedevulcanizare@gmail.com</p>
+                        <div class="fb-like" data-href="https://www.facebook.com/Produsedevulcanizarero-521403885016941/" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
                     </div>
                     <div class="col-sm-6 ">
-
-                        <iframe id="gmap_canvas"
-                            src="https://maps.google.com/maps?q=bulevardul%20bucuresti%2035A%20baia%20mare&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                            href="https://www.pureblack.de"></a>
+                        <h5>Scrie-ne pe facebook:</h5>
+                        <a href="https://www.facebook.com/Produsedevulcanizarero-521403885016941/s" title="Facebook" class="btn btn-facebook btn-lg"><i class="fa fa-facebook fa-fw"></i> Facebook</a>
                     </div>
                 </div>
             </div>
