--- a/public/despreNoi.html
+++ b/public/despreNoi.html
@@ -44,7 +44,7 @@
             </div>
          </div>
          <div class="main1">
-             Suntem o firma<br> nationala de transport <br> produse de <br> vulcanizare
+             Suntem o firma nationala<br> de distributie<br> consumabile si produse de vulcanizare
          </div>
          <div class="main2">
              Experinta de peste<br><span>10 ani</span><br>in acest domeniu
