--- a/public/admin.html
+++ b/public/admin.html
@@ -52,5 +52,97 @@
     </div>
 </div>
 
+
+<?php include 'ImageUpload.php';?>
+
+<div id="main2">
+    <div class="content">
+        <h2 class="content-subhead">Adauga Produse</h2>
+        <div class="form-group">
+            <input id="product_name" type="text" class="form-control" placeholder="Nume">
+            <input id="image_name" type="text" class="form-control" placeholder="Nume Imagine">
+            <input id="about" type="text" class="form-control" placeholder="Descriere">
+            <select name="tipuri" id="tip" class="browser-default custom-select">
+                <option value="petece">Petece</option>
+                <option value="contragreutati">Contragreutati</option>
+                <option value="valve">Valve</option>
+                <option value="anvelope">Anvelope</option>
+                <option value="diverse">Diverse</option>
+                <option value="camere">Camere</option>
+            </select>
+            <button type="submit" class="btn btn-primary btn-lg">Adauga produs</button>
+        </div>
+
+
+        <form action="ImageUpload.php" method="POST" enctype="multipart/form-data">
+            <div class="form-group">
+                <label>Adaugati imaginea pentru produs</label>
+                <input type="file" class="form-control-file" name="image"/>
+                <input type="submit"/>
+            </div>
+        </form>
+
+        <script>
+            $("button").click(function (e) {
+                e.preventDefault();
+                let name = $('#product_name').val();
+                let img_name = $('#image_name').val();
+                let type = $('#tip').val();
+                let description = $('#about').val();
+
+                $.ajax({
+                    type: "POST",
+                    url: "/api/products",
+                    data: {"name": name, "img_name": img_name, "type": type, "description": description},
+
+                    success: function (result) {
+                        alert(result)
+                    }
+                });
+            });
+        </script>
+        <table class="table table-dark">
+            <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Nume</th>
+                <th scope="col">Descriere</th>
+                <th scope="col">Tip Produs</th>
+                <th scope="col">Nume imagine</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+
+        <script>
+            $("document").ready(function () {
+                var customers = $.get({
+                    url: "/api/products",
+                    success: function (data) {
+                        data.forEach(product => {
+                            $("tbody").append(
+                                '<tr>' +
+                                /*' <th scope=\"row\">' + index + '</th>' +*/
+                                "<td>" + product.id + "</td>" +
+                                "<td>" + product.name + "</td>" +
+                                "<td>" + product.description + "</td>" +
+                                "<td>" + product.type + "</td>" +
+                                "<td>" + product.img_name + "</td>" +
+                                "</tr>"
+                            );
+                        });
+
+                    }
+
+                });
+
+
+            })
+        </script>
+    </div>
+</div>
+
+
 </body>
 </html>
